overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,17 @@ button {
 }
 .page-container {
   min-height: 100vh;
+  overflow: hidden;
 }
 .btn {
   background-color: black;
   color: white;
   padding: 10px 18px;
   border-radius: 15px;
+}
+.header-title {
+  font-size: 52px !important;
+  font-weight: 500 !important;
 }
 @media only screen and (min-width: 600px) {
   button:hover {
